# bit_span

./: CMakeLists.txt  README.md
include/tudocomp/ds/: BitPackingVector.hpp  IntPtr.hpp  IntRepr.hpp  uint_t.hpp
include/tudocomp/util/: bit_packed_layout_t.hpp  bits.hpp  conditional_bit_packed.hpp  int_coder.hpp  maybe_bit_packed.hpp  sdsl_bits.hpp
test/: CMakeLists.txt  bit_packed_layout_tests.cpp  generic_int_vector_tests.cpp
test/test/: testsuite.cmake
